[package]
name = "libslinkynet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Networking
libp2p = { version = "0.54.1", features = ["full"] }
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1.85"

# Serde
serde = {version = "1.0.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9.33"
serde-encrypt = "0.7.0"

# Encoding
base32 = "0.5.0"
hex = "0.4.3"
base58 = "0.2.0"

# Errors
thiserror = "2.0.0"

# Cryptograhpy
libsumatracrypt-rs = "0.6.1"

# Logger
log = "0.4"
pretty_env_logger = "0.5.0"

# HTTP Requests
reqwest = { version = "0.12.12", features = ["json"] }


# Time
chrono = "0.4.39"

# FileSystem
directories = "5.0.1"

# Ring
ring = "0.17.8"

# RAFT
openraft = "0.9.17"
openraft-rocksstore = "0.9.17"

# Zeroize
zeroize = { version= "1.8.1", features=["derive"]}
